[workspace]
members = [
    "packages/cc",
    "packages/cli",
    "packages/core",
    "packages/driver",
    "packages/logging",
    "packages/proc-macros",
    "packages/serial",
]
resolver = "2"

[workspace.package]
rust-version = "1.76"
edition = "2021"

[workspace.dependencies]
aes = "0.8.4"
bitvec = "1.0.1"
bytes = "1.5.0"
cbc = { version = "0.1.2", features = ["alloc"] }
ccm = "0.5.0"
chrono = "0.4.31"
crc16 = "0.4.0"
custom_debug_derive = "0.5.1"
enum_dispatch = "0.3.12"
enum-iterator = "1.4.1"
futures = "0.3.29"
hex = "0.4.3"
num-traits = "0.2.17"
ofb = "0.6.1"
paste = "1.0.14"
pin-project = "1.1.3"
serialport = "4.2.2"
termcolor = "1.4.0"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["formatting", "macros"] }
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.10", features = ["codec"] }
typed-builder = "0.18.0"
unicode-segmentation = "1.10.1"
unique_id = "0.1.5"
ux = "0.1.5"
petgraph = "0.6.4"
proc-macros = { path = "packages/proc-macros" }
walkdir = "2.4.0"
zwave-cc = { path = "packages/cc" }
zwave-core = { path = "packages/core" }
zwave-driver = { path = "packages/driver" }
zwave-serial = { path = "packages/serial" }
zwave-logging = { path = "packages/logging" }

[profile.release]
incremental = true
# consider objcopy --compress-debug-sections to reduce binary size
lto = true
# Include minimal debug symbols for better backtraces.
debug = 1
