[workspace]
members = [
    "packages/cc",
    "packages/cli",
    "packages/core",
    "packages/driver",
    "packages/logging",
    "packages/pal",
    "packages/proc-macros",
    "packages/serial",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"
edition = "2024"

[workspace.dependencies]
aes = "0.8.4"
bitvec = "1.0.1"
bytes = { version = "1.5.0", default-features = false }
cbc = { version = "0.1.2", features = ["alloc"] }
ccm = "0.5.0"
chrono = "0.4.31"
crc16 = "0.4.0"
enum_dispatch = "0.3.12"
enum-iterator = "1.4.1"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
getrandom = "0.2.15"
hex = "0.4.3"
num-traits = "0.2.17"
ofb = "0.6.1"
paste = "1.0.14"
termcolor = "1.4.0"
thiserror = "2.0"
tinyvec = { git = "https://github.com/AlCalzone/tinyvec", version = "0.1.0" }
typed-builder = "0.18.0"
unicode-segmentation = "1.10.1"
ux = "0.1.5"
petgraph = "0.6.4"
embedded-io-async = "0.7"
embedded-io = "0.7"
proc-macros = { path = "packages/proc-macros" }
walkdir = "2.4.0"
zwave-cc = { path = "packages/cc" }
zwave-core = { path = "packages/core" }
zwave-driver = { path = "packages/driver" }
zwave-pal = { path = "packages/pal" }
zwave-serial = { path = "packages/serial" }
zwave-logging = { path = "packages/logging" }

[profile.release]
incremental = true
# consider objcopy --compress-debug-sections to reduce binary size
lto = true
# Include minimal debug symbols for better backtraces.
debug = 1
