[workspace]
members = [
    "packages/cc",
    "packages/cli",
    "packages/core",
    "packages/driver",
    "packages/logging",
    "packages/pal",
    "packages/proc-macros",
    "packages/serial",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"
edition = "2024"

[workspace.dependencies]
aes = "0.8.4"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bytes = { version = "1.5.0", default-features = false }
cbc = { version = "0.1.2", features = ["alloc"] }
ccm = "0.5.0"
chrono = "0.4.31"
crc16 = "0.4.0"
enum_dispatch = "0.3.12"
enum-iterator = "1.4.1"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
getrandom = "0.2.15"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.17", default-features = false }
ofb = "0.6.1"
paste = "1.0.14"
termcolor = "1.4.0"
thiserror = { version = "2.0", default-features = false }
tinyvec = { git = "https://github.com/AlCalzone/tinyvec", default-features = false, features = ["alloc"] }
typed-builder = "0.18.0"
unicode-segmentation = "1.10.1"
ux = { version = "0.1.5", default-features = false }
petgraph = "0.6.4"
embedded-io-async = "0.7"
embedded-io = "0.7"
proc-macros = { path = "packages/proc-macros" }
walkdir = "2.4.0"
zwave-cc = { path = "packages/cc", default-features = false }
zwave-core = { path = "packages/core", default-features = false }
zwave-driver = { path = "packages/driver", default-features = false }
zwave-pal = { path = "packages/pal" }
zwave-serial = { path = "packages/serial", default-features = false }
zwave-logging = { path = "packages/logging", default-features = false }

[profile.release]
incremental = true
# consider objcopy --compress-debug-sections to reduce binary size
lto = true
# Include minimal debug symbols for better backtraces.
debug = 1
